--- a/app/src/main/res/layout/activity_number_auth.xml
+++ b/app/src/main/res/layout/activity_number_auth.xml
@@ -1,62 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".numberAuth"
     android:layout_margin="10dp"
     android:background="@drawable/b3"
-    android:orientation="vertical">
+    tools:context=".numberAuth">
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="348dp"
-        android:layout_height="96dp"
-        android:orientation="horizontal"
-    >
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="350dp"
+        android:layout_height="133dp"
+        android:text="@string/phone_auth"
+        android:textSize="35dp"
+        android:textStyle="bold"
 
-        <com.hbb20.CountryCodePicker
-            android:layout_width="119dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            app:ccp_autoDetectCountry="true"
-            app:ccp_showNameCode="true"
-            app:ccp_textSize="20dp"
-
-            />
-
-
-        <EditText
-            android:id="@+id/edit_text"
-
-            android:layout_width="233dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:hint="@string/hint_phone_number"
-            android:inputType="phone"
-            android:maxLength="10"
-            android:textSize="20dp" />
-
-
-    </LinearLayout>
-
+        app:layout_constraintBottom_toTopOf="@+id/savePhoneNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.358" />
 
     <Button
         android:id="@+id/savePhoneNumber"
-        android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="392dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/btn_back"
         android:onClick="DisplayMessage"
         android:text="@string/conti_button"
-        tools:layout_editor_absoluteX="0dp" /><![CDATA[
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
-    />
+    <EditText
+        android:id="@+id/edit_text"
+        android:layout_width="168dp"
+        android:layout_height="46dp"
+        android:hint="@string/hint_phone_number"
+        android:maxLength="10"
+android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/savePhoneNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <com.hbb20.CountryCodePicker
+        android:id="@+id/countryCodePicker"
+        android:layout_width="159dp"
+        android:layout_height="47dp"
+        android:gravity="center"
+
+        app:ccp_autoDetectCountry="true"
+        app:ccp_showNameCode="true"
+        app:ccp_textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/savePhoneNumber"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+    </com.hbb20.CountryCodePicker>
 
 
-]]>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
