--- a/app/src/main/res/layout/activity_confirm_page.xml
+++ b/app/src/main/res/layout/activity_confirm_page.xml
@@ -4,24 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/b3"
+    android:background="@drawable/b1"
 
-    tools:context=".dropdown_List">
+    tools:context=".confirmPage">
 
-    <Spinner
+    <TextView
+        android:layout_width="319dp"
+        android:layout_height="314dp"
+        android:text="@string/recordSaved"
 
-
-        android:padding="30dp"
-        android:id="@+id/spinner"
-        android:layout_width="339dp"
-        android:layout_height="476dp"
-
+        android:textSize="50dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-       />
-
-
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
